--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <h1>Hello, world!</h1>
+    <input type="text">
  <script src="script/script.js"></script>   
 </body>
 </html>
